Add checker framework
See https://checkerframework.org/manual